# Vidgo_Gen_AI

./: .gcloudignore  .gitignore  ARCHITECTURE.md  ARCHITECTURE_FINAL.md  ARCHITECTURE_v2.md  BREAK_EVEN_ANALYSIS.md  BROWSER_SMOKE_TEST.md  CHANGELOG.md  CREDIT_CONSUMPTION_SPEC.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_PLAN_FINAL.md  Hours_Summary.md  IMPLEMENTATION_SUMMARY.md  PLAN.md  README.md  README.zh-TW.md  REPORT.md  bug.md  cloudbuild.backend-only.yaml  cloudbuild.frontend-only.yaml  cloudbuild.yaml  docker-compose.watcher.yml  docker-compose.yml  final_test.md  full-test.md  human_test_results_summary.md  main.py  pyproject.toml  report.md  spec.md  test_api_comprehensive.py  test_comprehensive.py  test_flow.py  test_human_test_cases.py  test_new_pricing_system.py  test_report_2026_03_18.md  test_results.md  test_results_20260318_115908.json  vidgo-backend-architecture.md  (+3 more)
.claude/: settings.json  settings.local 2.json  settings.local.json
.github/: copilot-instructions.md
.playwright-mcp/: page-2026-04-12T10-50-27-916Z.yml  page-2026-04-12T10-50-38-291Z.yml  page-2026-04-12T10-51-10-743Z.yml  page-2026-04-12T10-51-47-268Z.yml  page-2026-04-12T10-52-52-344Z.yml  page-2026-04-12T10-55-01-691Z.yml  page-2026-04-12T10-56-04-873Z.yml  page-2026-04-12T12-05-19-912Z.yml  page-2026-04-12T12-06-51-175Z.yml  page-2026-04-12T12-07-33-260Z.yml  page-2026-04-12T13-05-31-990Z.yml  page-2026-04-12T13-06-45-196Z.yml  page-2026-04-12T13-07-43-501Z.yml  page-2026-04-12T13-07-55-232Z.yml  page-2026-04-12T13-08-03-924Z.yml  page-2026-04-12T13-08-12-244Z.yml  (+82 more)
(+693 files in other folders)
