[project]
name = "vidgo-gen-ai"
version = "0.1.0"
description = "AI-powered video generation SaaS platform with intelligent failover, multi-tier subscriptions, and style transformation features."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # FastAPI Backend
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "sqlalchemy[asyncio]==2.0.25",
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6",
    "httpx==0.26.0",
    # Background Tasks
    "redis==5.0.1",
    "arq>=0.26.0",  # Async task queue (replaces celery for FastAPI)
    # Streamlit Frontend
    "streamlit==1.30.0",
    "streamlit-option-menu==0.3.12",
    "extra-streamlit-components==0.1.60",
    "requests==2.31.0",
    # Utilities
    "python-decouple==3.8",
    "pillow==10.2.0",
    "bcrypt==4.1.2",
    "gunicorn==21.2.0",
    "email-validator>=2.3.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "google-generativeai>=0.8.6",
    "rembg>=2.0.69",
    "onnxruntime>=1.23.2",
]
